styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Inter', sans-serif;
}

.nav-container {
    background-color: #1F2937;
    width: 100%;
    padding: 1rem 15rem;
    display: flex;
}

nav h1 {
    color: #F9FAF8;
    font-size: 24px;
}

nav ul {
    list-style-type: none;
    margin-left: auto;
    font-size: 18px;
    font-weight: lighter;
    display: flex;
    align-items: flex-end;
    gap: 20px;
}

nav ul li {
    display: inline;
}

nav ul li a {
    color: #E5E7EB;
    text-decoration: none;
}

.hero-container {
    background-color: #1F2937;
    width: 100%;
    padding: 5rem 15rem;
    display: flex;
    align-items: center;
    column-gap: 5rem;
}

.hero-text-container {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.hero-text-container h1 {
    font-size: 48px;
    font-weight: extra-bold;
    color: #F9FAF8;
}

.hero-text-container p {
    font-size: 18px;
    font-weight: 300;
    color: #E5E7EB;
}

.hero-text-container button {
    background-color: #3882F6;
    color: #E5E7EB;
    border: none;
    max-width: 7rem;
    height: 2rem;
    border-radius: 5px;
    font-weight: bolder;
}

.cards-container {
    width: 100%;
    padding: 2.5rem 15rem;
    padding-bottom: 7rem;
}

.cards-container h1 {
    font-size: 36px;
    font-weight: bolder;
    color: #1F2937;
    text-align: center;
    margin-bottom: 2rem;
}

.cards-row {
    display: flex;
    gap: 4rem;
}

.card-image {
    height: 10rem;
    width: 100%;
    border: 5px solid #3882F6;
    border-radius: 15px;
}

.card-text {
    text-align: center;
    margin-top: 10px;
    color: #1F2937;
}

.quote-container {
    width: 100%;
    padding: 2.5rem 15rem;
    padding-bottom: 7rem;
    background-color: #E5E7EB;
}

.quote-block {
    font-size: 36px;
    font-weight: 300;
    color: #1F2937;
    padding: 6rem 2rem;
    padding-bottom: 0;
    text-align: justify;
}

.quote-person {
    font-size: 22px;
    font-weight: 700;
    text-align: right;
}

